src/scss/06_components/layout/_layout.scss
$-sidebar-width: calc(340px + $spacing-double + $spacing-double);

.layout-main-wrapper * {
  scroll-margin-top: 113px; // Mobile header + language switcher.

  @include breakpoint($breakpoint-m) {
    scroll-margin-top: 0; // No fixed elements on desktop.

    .toolbar-horizontal & {
      scroll-margin-top: $spacing-quadruple;
    }
  }
}

.main-content {
  display: grid;
  grid-template-areas:
    'subnav'
    'content'
    'sidebar';
  grid-template-columns: 100%;
  grid-template-rows: auto;
  margin-left: auto;
  margin-right: auto;
  margin-top: $spacing-quadruple;

  @include breakpoint($breakpoint-l) {
    margin-top: $spacing-sextuple;
  }

  @include breakpoint($breakpoint-l) {
    .has-sidebar & {
      grid-template-areas: 'content sidebar';
      grid-template-columns: auto $-sidebar-width;
    }

    .has-sidebar--first & {
      grid-template-areas:
        'subnav content'
        'sidebar content';
      grid-template-columns: $-sidebar-width auto;
      grid-template-rows: auto 1fr;
    }
  }
}

// stylelint-disable no-descending-specificity
// Set proper width for all generic page components
.has-sidebar,
.no-sidebar {
  .page-title,
  .lead-in,
  .page-divider,
  .main-image,
  .long-desc,
  .enriched-content:not(.components),
  .content-tags {
    @include components-container-max-width;
    @include component-side-padding;
    margin-left: auto;
    margin-right: auto;
  }
}
// stylelint-enable no-descending-specificity

.layout-sidebar-first {
  display: none;
  grid-area: subnav;
  margin-bottom: $spacing-triple;

  @include breakpoint($breakpoint-l) {
    display: block;
    padding-left: $spacing-double;
    padding-right: $spacing-double;

    .no-sidebar-second & {
      margin-bottom: 0;
    }
  }
}

.layout-content {
  grid-area: content;

  &:not(:last-child) {
    margin-bottom: $spacing-triple;

    @include breakpoint($breakpoint-l) {
      margin-bottom: 0;
    }
  }
}

.layout-sidebar-second {
  grid-area: sidebar;
}

